# ReportGenie

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: hugging_face-deploy.yml
knowledge/: cities.json  industries.json
src/report_genie/: app.py  crew.py  main.py
src/report_genie/config/: agents.yaml  tasks.yaml
src/report_genie/schemas/: schema.py
src/report_genie/tools/: neo4j_tools.py
src/report_genie/utils/: utils.py
